syntax = "proto3";

package auction;

option go_package = "auction/proto";

// Client-to-Node API
service Auction {
  rpc Bid(BidRequest) returns (BidResponse);
  rpc Result(ResultRequest) returns (ResultResponse);
}

// Node-to-Node Internal API for replication
service NodeSync {
  rpc Heartbeat(HeartbeatRequest) returns (HeartbeatResponse);
  rpc SyncState(SyncStateRequest) returns (SyncStateResponse);
  rpc ReplicateBid(ReplicateBidRequest) returns (ReplicateBidResponse);
}

message BidRequest {
  string bidder_id = 1;
  int32 amount = 2;
}

message BidResponse {
  enum Outcome {
    SUCCESS = 0;
    FAIL = 1;
    EXCEPTION = 2;
  }
  Outcome outcome = 1;
  string message = 2;
}

message ResultRequest {}

message ResultResponse {
  bool auction_over = 1;
  string winner = 2;
  int32 winning_bid = 3;
  int32 highest_bid = 4;
  string message = 5;
}

// Internal node-to-node messages
message HeartbeatRequest {
  int32 node_id = 1;
  int64 timestamp = 2;
}

message HeartbeatResponse {
  bool is_leader = 1;
  int32 leader_id = 2;
}

message SyncStateRequest {
  int32 node_id = 1;
}

message SyncStateResponse {
  map<string, int32> bids = 1;
  int32 highest_bid = 2;
  string highest_bidder = 3;
  int64 start_time = 4;
}

message ReplicateBidRequest {
  string bidder_id = 1;
  int32 amount = 2;
  int64 timestamp = 3;
}

message ReplicateBidResponse {
  bool success = 1;
}
